--- a/src/main/resources/com/abc/demo_mini_proyecto/Iconos/add-figure-form.fxml
+++ b/src/main/resources/com/abc/demo_mini_proyecto/Iconos/add-figure-form.fxml
@@ -9,6 +9,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import java.lang.String?>
+<?import javafx.scene.control.ColorPicker?>
+
 
 <VBox alignment="TOP_LEFT" prefWidth="350.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.abc.demo_mini_proyecto.controllers.FigureFormController">
     <padding>
@@ -37,20 +39,9 @@
         <Label text="Nombre" />
         <TextField fx:id="txtNombre" promptText="Nombre de la figura" />
 
+
         <Label text="Color" />
-        <ComboBox fx:id="cmbColor" prefWidth="200.0">
-            <items>
-                <FXCollections fx:factory="observableArrayList">
-                    <String fx:value="ROJO" />
-                    <String fx:value="VERDE" />
-                    <String fx:value="AZUL" />
-                    <String fx:value="AMARILLO" />
-                    <String fx:value="NEGRO" />
-                    <String fx:value="BLANCO" />
-                    <String fx:value="ROSADO" />
-                </FXCollections>
-            </items>
-        </ComboBox>
+        <ColorPicker fx:id="colorPicker" />
 
         <VBox fx:id="vboxCirculoCampos" spacing="10.0">
             <children>
